Update 'go-rnewnqth' component image to: quay.io/rhtap_qe/go-rnewnqth:d7a9161e5a65a9a2c98aee3d99b13326cfdaf046@sha256:edb822159ae288152cb21f022958e4c7e1bdf3c6094545c464bf6379bae2a8a7

--- a/components/go-rnewnqth/overlays/development/deployment-patch.yaml
+++ b/components/go-rnewnqth/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-rnewnqth
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-rnewnqth:d7a9161e5a65a9a2c98aee3d99b13326cfdaf046@sha256:edb822159ae288152cb21f022958e4c7e1bdf3c6094545c464bf6379bae2a8a7
+          name: container-image
